--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='60' height='60' fill='none'%3E%3Ccircle cx='30' cy='30' r='20' fill='%2377DD86'/%3E%3C/svg%3E" />
   <title>Nors UI</title>
   <style>
     html, body {
@@ -19,15 +20,15 @@
       font-family: sans-serif;
       font-size: 20px;
       flex-direction: column;
-      letter-spacing: -.2vw;
+      letter-spacing: -5px;
     }
     h1 {
       font-size: 4vw;
       display: flex;
     }
     span {
-      font-size: 3vw;
-      border-bottom: 10px solid white;
+      color: #77dd86;
+      margin-right: 15px;
     }
   </style>
 </head>
