--- a/index.html
+++ b/index.html
@@ -33,6 +33,19 @@
   </style>
 </head>
 <body>
+      <script type="application/ld+json"> {
+          "@context" : "http://schema.org",
+          "@type" : "Organization",
+          "name" : "Nors UI",
+          "url" : "https://nors.io",
+          "sameAs" : [
+            "https://github.com/nors",
+            "http://dev.to/nors",
+            "http://indiehackers.com/nors",
+            "https://nors.hashnode.dev",
+            "https://gumroad.com/nors"
+          ] }
+      </script>
   <h1>nors</h1>
 </body>
 </html>
