--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@
       margin-right: 15px;
     }
   </style>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-L5XRNBYWM3"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-L5XRNBYWM3');
+  </script>
 </head>
 <body>
       <script type="application/ld+json"> {
