--- a/index.html
+++ b/index.html
@@ -56,5 +56,6 @@
           ] }
       </script>
   <h1>nors</h1>
+  <script async data-uid="eb34eccdf6" src="https://nors.ck.page/eb34eccdf6/index.js"></script>
 </body>
 </html>
