--- a/index.html
+++ b/index.html
@@ -20,15 +20,42 @@
       font-family: sans-serif;
       font-size: 20px;
       flex-direction: column;
-      letter-spacing: -5px;
+
     }
     h1 {
-      font-size: 4vw;
+      font-size: 100px;
       display: flex;
+      letter-spacing: -5px;
     }
     span {
       color: #77dd86;
       margin-right: 15px;
+    }
+    input {
+      border: 2px solid rgba(255, 255, 255, 0.1) !important;
+      color: white !important;
+      background: transparent !important;
+      background-color: rgba(255, 255, 255, 0.04) !important;
+    }
+    button {
+      background: #565FB6 !important;
+
+      text-align: center;
+    }
+
+    button span {
+      margin: 0;
+      color: #F7F8F8 !important;
+    }
+    .formkit-alert-error {
+      background: transparent !important;
+      font-size: 10px;
+      /* padding-left: 0px !important; */
+      border: none !important;
+    }
+    .formkit-alert-error li {
+      text-align: center;
+
     }
   </style>
   <!-- Global site tag (gtag.js) - Google Analytics -->
