--- a/index.html
+++ b/index.html
@@ -35,11 +35,13 @@
       border: 2px solid rgba(255, 255, 255, 0.1) !important;
       color: white !important;
       background: transparent !important;
-      background-color: rgba(255, 255, 255, 0.04) !important;
+      background-color: rgba(255, 255, 255, 0.03) !important;
+    }
+    input::placeholder {
+      color: #525d6b !important;
     }
     button {
       background: #565FB6 !important;
-
       text-align: center;
     }
 
