remove the logo

--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
       text-align: center;
 
     }
+
+    .formkit-powered-by-convertkit-container{
+      color: rgba(255, 255, 255, 0) !important;
+      opacity: 0;
+      z-index: -1000 !important;
+    }
   </style>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-L5XRNBYWM3"></script>
