--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='60' height='60' fill='none'%3E%3Ccircle cx='30' cy='30' r='20' fill='%2377DD86'/%3E%3C/svg%3E" />
   <title>Nors UI</title>
+  <meta name="google-site-verification" content="RcFXHuaWyWMHUvGq-aNJhgPpbhDiHbwZENlnE3uyNX0" />
   <style>
     html, body {
       padding: 0;
